--- a/Arc Welding/Assembly-CSharp.csproj
+++ b/Arc Welding/Assembly-CSharp.csproj
@@ -159,7 +159,9 @@
      <Compile Include="Assets\GoogleVR\Scripts\Utilities\GvrVRHelpers.cs" />
      <Compile Include="Assets\GoogleVR\Scripts\Video\GvrVideoPlayerTexture.cs" />
      <Compile Include="Assets\Scripts\ContrllerCallibration.cs" />
+     <Compile Include="Assets\Scripts\Controls.cs" />
      <Compile Include="Assets\Scripts\GunMovement.cs" />
+     <Compile Include="Assets\Scripts\Helmet.cs" />
      <Compile Include="Assets\Scripts\TouchDown.cs" />
      <None Include="Assets\GoogleVR\Shaders\GvrUIOverlayFont.shader" />
      <None Include="Assets\GoogleVR\Shaders\GvrAdditiveOverlay.shader" />
